--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
         <div id="nav-bottom"></div>
     </nav>
-    <a href="https://www.naver.com"><img src="2.jpg" /></a>
+    <a><img src="2.jpg" /></a>
     
 </body>
 </html>
