--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="index.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <link rel="stylesheet" href="index.css" />
+    <linkttps://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/fe3e71dd55.js" crossorigin="anonymous"></script>
 </head>
@@ -17,7 +17,15 @@
                 <li><a><i class="fa-solid fa-tv"></i></a></li>
             </ul>
         </div>
-        <div id="nav-bottom"></div>
+        <div id="nav-bottom">
+            <ul>
+                <li><a>홈</a></li>
+                <li><a>실시간</a></li>
+                <li><a>TV프로그램</a></li>
+                <li><a>영화</a></li>
+                <li><a>파라마운트</a></li>
+            </ul>
+        </div>
     </nav>
     <a><img src="2.jpg" /></a>
     
