--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="index.css" />
-    <linkttps://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/fe3e71dd55.js" crossorigin="anonymous"></script>
 </head>
@@ -23,11 +23,65 @@
                 <li><a>실시간</a></li>
                 <li><a>TV프로그램</a></li>
                 <li><a>영화</a></li>
-                <li><a>파라마운트</a></li>
+                <li><a>파라마운트+</a></li>
             </ul>
         </div>
     </nav>
-    <a><img src="2.jpg" /></a>
+
+    <main>
+        <div id="carousel">
+            <a><img src="2.jpg" /></a>
+            <span>이미지에 대한 설명</span>
+        </div>
+    </main>
+
+    <section>
+        <div id="section-one">
+            <span>TOP20 프로그램</span>
+            <div class="section-group">
+                <img src="3.jpg">
+            </div>
+        </div>
+
+        <div id="section-two">
+            <span>Quick VOD</span>
+            <div class="section-group">
+                <img src="4.jpg">
+            </div>
+        </div>
+
+        <div id="section-three">
+            <span>자주 시청하는 콘텐츠</span>
+            <div class="section-group">
+                <img src="5.jpg">
+            </div>
+        </div>
+
+    </section>
+
+
+
+    <footer>
+        <ul>
+            <li><a><div class="footer-group">
+                <span class="footer-image"><i class="fa-solid fa-house"></i></span>
+                <span class="footer-text">홈</span>
+            </div></a></li>
+            <li><a><div class="footer-group">
+                <span class="footer-image"><i class="fa-brands fa-youtube"></i></span>
+                <span class="footer-text">공개예정</span>
+            </div></a></li>
+            <li><a><div class="footer-group">
+                <span class="footer-image"><i class="fa-solid fa-magnifying-glass"></i></span>
+                <span class="footer-text">검색</span>
+            </div></a></li>
+            <li><a><div class="footer-group">
+                <span class="footer-image"><i class="fa-solid fa-record-vinyl"></i></span>
+                <span class="footer-text">기록</span>
+            </div></a></li>
+        </ul>
+    </footer>
+    
     
 </body>
 </html>
